@@ -15,6 +15,7 @@ fid_block_time	1	19	[ 0 1 ]
 fid_block_time	1	24	[ 0 1 ]
 fid_block_time	1	25	[ 0 1 ]
 fid_fileinfo	1	[ test60-subname.p   1 2 0 0 ]
+fid_fileinfo	2	[ Devel/NYTProf/Test.pm   2 4 0 0 ]
 fid_line_time	1	5	[ 0 1 ]
 fid_line_time	1	9	[ 0 1 ]
 fid_line_time	1	12	[ 0 1 ]
@@ -36,12 +37,13 @@ fid_sub_time	1	25	[ 0 1 ]
 profile_modes	fid_block_time	block
 profile_modes	fid_line_time	line
 profile_modes	fid_sub_time	sub
-sub_caller	Socket::pack_sockaddr_un	1	12	[ 1 0 0 0 0 ]
-sub_caller	Socket::pack_sockaddr_un	1	16	[ 1 0 0 0 0 ]
-sub_caller	Socket::pack_sockaddr_un	1	19	[ 1 0 0 0 0 ]
-sub_caller	Socket::pack_sockaddr_un	1	5	[ 1 0 0 0 0 ]
-sub_caller	Socket::pack_sockaddr_un	1	9	[ 1 0 0 0 0 ]
+sub_caller	Devel::NYTProf::Test::example_xsub	1	12	[ 1 0 0 0 0 ]
+sub_caller	Devel::NYTProf::Test::example_xsub	1	16	[ 1 0 0 0 0 ]
+sub_caller	Devel::NYTProf::Test::example_xsub	1	19	[ 1 0 0 0 0 ]
+sub_caller	Devel::NYTProf::Test::example_xsub	1	5	[ 1 0 0 0 0 ]
+sub_caller	Devel::NYTProf::Test::example_xsub	1	9	[ 1 0 0 0 0 ]
 sub_caller	main::launch	1	25	[ 1 0 0 0 0 ]
-sub_subinfo	Socket::pack_sockaddr_un	[ undef 0 0 6 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::BEGIN	[ 2 8 8 0 0 0 ]
+sub_subinfo	Devel::NYTProf::Test::example_xsub	[ 2 0 0 6 0 0 ]
 sub_subinfo	main::BEGIN	[ 1 2 2 0 0 0 ]
 sub_subinfo	main::launch	[ 1 24 24 1 0 0 ]
